--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,8 @@ services:
   - type: web
     name: lms-backend
     runtime: node
-    buildCommand: npm install
-    startCommand: npm run dev
+    buildCommand: cd backend && npm install
+    startCommand: cd backend && npm run dev
     envVars:
       - key: NODE_ENV
         value: production
@@ -11,4 +11,3 @@ services:
         sync: false
       - key: PORT
         value: 5000
-    rootDir: backend
