--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,1 @@
-# REACT_APP_API_URL=https://lms-backend-tddw.onrender.com
-REACT_APP_API_URL=http://localhost:5000
+REACT_APP_API_URL=https://lms-backend-tddw.onrender.com00
