--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,9 @@
 # MongoDB Configuration
-# Get this from MongoDB Atlas - Database Access - Connect
-MONGODB_URI=mongodb+srv://<username>:<password>@cluster0.ptajkas.mongodb.net/lms_demo?retryWrites=true&w=majority
+MONGODB_URI=mongodb://localhost:27017/lms_demo
+
+# For MongoDB Atlas, use:
+# MONGODB_URI=mongodb+srv://<username>:<password>@cluster.mongodb.net/lms_demo?retryWrites=true&w=majority
 
 # Server Configuration
 PORT=5000
-NODE_ENV=production
+NODE_ENV=development
