--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
-REACT_APP_API_URL=https://lms-backend-tddw.onrender.com
+REACT_APP_API_URL=https://lms-backend-1dvw.onrender.com
 
 # REACT_APP_API_URL=http://localhost:5000
